syntax="proto3"; //版本号
package api;  //包名
option go_package = "./;api";

// 房间是否存在
message IsRoomExist_InObj {
  uint64 roomId=1;
}

message IsRoomExist_OutObj {
  bool ok = 1 ;
}


// 创建房间
message CreateRoom_InObj {
  uint64 roomId=1;
  uint32 actId=2;
  uint32 gameLv=3;
}

message CreateRoom_OutObj {
  map<uint32,playerInfo> players = 1;  //房间内的玩家uid,准备情况
}

// 加入房间
message JoinRoom_InObj {
  uint64 roomId=1;
}

message JoinRoom_OutObj {
  map<uint32,playerInfo> players = 1;  //游戏位次=>玩家信息情况
}

// 加入游戏
message JoinGame_InObj {
  uint32 postionId=1;
}

message JoinGame_OutObj {
  map<uint32,playerInfo> players = 1;  //游戏位次=>玩家信息情况
}

message playerInfo{
  uint64 uid=1;
  bool state=2;
  bool isMaster=3;
  string head=4;
  string name=5;
  bool isRobot=6;
}

// 更改游戏位次
message ChangePos_InObj {
  uint32 newPosId=1;
}

message ChangePos_OutObj {
  map<uint32,playerInfo> players = 1;  //游戏位次=>玩家信息情况
}

// 离开游戏
//message LeaveGame_InObj {
//}

message LeaveGame_OutObj {
  map<uint32,playerInfo> players = 1; //游戏位次=>玩家信息情况
}


// 准备
//message SetOrCancelPrepare_InObj {
//}

message SetOrCancelPrepare_OutObj {
  map<uint32,playerInfo> players = 1; //游戏位次=>玩家信息情况
}


// 开始游戏
//message GameStart_InObj {
//}

message GameStart_OutObj {
  bool ok=1;
}

// 添加机器人
message AddRobot_InObj {
  string robotHead=1;
  string robotName=2;
}

message AddRobot_OutObj {
  map<uint32,playerInfo> players = 1;  //游戏位次=>玩家信息情况
}

// 删除机器人
message DelRobot_InObj {
  uint32 posId=1;
}

message DelRobot_OutObj {
  map<uint32,playerInfo> players = 1;  //游戏位次=>玩家信息情况
}

// 获取当前游戏房信息
//message GetRoomInfo_InObj {
//}

message GetRoomInfo_OutObj {
  map<uint32,playerInfo> players = 1;  //游戏位次=>玩家信息情况
}
